--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,8 @@ code {
   font-family: "Open Sans", source-code-pro, Menlo, Monaco, Consolas,
     "Courier New", monospace;
 }
+
+a {
+  text-decoration: none;
+  color: black;
+}
