--- a/src/components/collection-item/collectionItem.styles.scss
+++ b/src/components/collection-item/collectionItem.styles.scss
@@ -1,5 +1,5 @@
 .collection-item {
-  width: 22%;
+  width: 22vw;
   display: flex;
   flex-direction: column;
   height: 350px;
@@ -38,14 +38,7 @@
     display: flex;
     justify-content: space-between;
     font-size: 18px;
-
-    .name {
-      width: 90%;
-      margin-bottom: 15px;
-    }
-
-    .price {
-      width: 10%;
-    }
+    flex-wrap: wrap;
+    
   }
 }
