--- a/src/components/collection-item/collectionItem.styles.scss
+++ b/src/components/collection-item/collectionItem.styles.scss
@@ -14,11 +14,7 @@
     margin-bottom: 5px;
   }
 
-  .custom-button {
-    width: 80%;
-    opacity: 0.7;
-    position: absolute;
-    top: 255px;
+  button {
     display: none;
   }
 
@@ -26,8 +22,7 @@
     .image {
       opacity: 0.8;
     }
-    .custom-button {
-      opacity: 0.85;
+    button {
       display: flex;
     }
   }
@@ -39,6 +34,5 @@
     justify-content: space-between;
     font-size: 18px;
     flex-wrap: wrap;
-    
   }
 }
